- Setclass union added as classes to bypass the warnings -MNodifications on help files - Important modif on build_aRchi to intergrate my routine instead of Bastien's for treeQSM models - Other small modifications in several functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,10 @@ Imports:
     progress,
     gtools
 Collate: 
+    'nullOrnumeric.R'
+    'nullOrlist.R'
+    'nullOrLASOrDatatable.R'
+    'nullOrDatatable.R'
     'aRchiClass.R'
     'BranchAngle.R'
     'Compute_A0.R'
