--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: QSM treatment for tree architecture
 Version: 1.0.0
 Author: Olivier Martin
 Maintainer: Olivier Martin <oli.martin@ntymail.com>
-Description: A package allowing tree architecture, biomass distribution or biomechanical metrics quantification using "Quantitative Structural Model" coming for terrestrial laser scanning (TLS) data. Two QSM format are accepted: TreeQSM and simpletree/simpleforest.
+Description: The aRchi package provides a set of tools to manipulate, visualize and compute metrics from quantitative structural model of trees (i.e the so-called QSM) . It can be used in various context of forest ecology (i.e biomass estimation) and tree architecture (i.e architectural metrics). The package is based on a new S4 class called aRchi.
 License: CeCILL
 Encoding: UTF-8
 LazyData: true
