--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Title: Quantitative Structural Model ('QSM') Treatment for Tree Architecture
 Version: 1.0.2
 Author: Olivier Martin
 Maintainer: Olivier Martin <oli.martin@ntymail.com>
-Description: The 'aRchi' package provides a set of tools to manipulate, visualize and compute metrics from quantitative structural model of trees (i.e the so-called 'QSM') . It can be used in various context of forest ecology (i.e biomass estimation) and tree architecture (i.e architectural metrics). The package is based on a new S4 class called 'aRchi'.
+Description: The 'aRchi' package provides a set of tools to manipulate, visualize and compute metrics from quantitative structural model of trees (i.e the so-called 'QSM') . It can be used in various context of forest ecology (i.e biomass estimation) and tree architecture (i.e architectural metrics), see Martin-Ducup et al. (2020) <doi:https://doi.org/10.1111/1365-2435.13678>. The package is based on a new S4 class called 'aRchi'.
+references: 
 License: CeCILL
 Encoding: UTF-8
 LazyData: true
