- 2.1.2 realesed in CRAN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@ importFrom("methods", "new")
 exportClasses(aRchi); export(aRchi);exportMethods("plot")
 importFrom("stats", "median")
 importFrom("utils", "setTxtProgressBar", "txtProgressBar","tail")
+importFrom("grDevices", "palette.colors")
 import(data.table)
 import(lidR)
