--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,5 @@ importFrom("utils", "setTxtProgressBar", "txtProgressBar","tail")
 importFrom("grDevices", "palette.colors")
 import(data.table)
 import(lidR)
+importFrom(Rcpp,evalCpp)
+useDynLib(aRchi, .registration = TRUE)
